[package]
name = "rt-local"
version = "0.1.4"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local/"
categories = ["asynchronous"]
keywords = ["async", "gui"]
description = "Thread local asynchronous runtime working with platform-specific event loops."
include = ["/LICENSE-*", "/src/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows = ["rt-local-runtime-windows"]

[dependencies]
rt-local-core = { version = "0.1.3", path = "core" }
rt-local-macros = { version = "=0.1.4", path = "macros" }
rt-local-runtime-windows = { version = "0.1.0", path = "runtime/windows", optional = true }
derive-ex = "0.1.4"

[dev-dependencies]
async-std = "1.12.0"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[workspace]
members = ["core", "macros", "runtime/windows"]
