[package]
name = "rt-local"
version = "0.1.4"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local/"
categories = ["asynchronous"]
keywords = ["async", "gui"]
description = "Thread local asynchronous runtime working with platform-specific event loops."
include = ["/LICENSE-*", "/src/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows = ["rt-local-runtime-windows"]
eframe = ["rt-local-runtime-eframe"]

[dependencies]
rt-local-core = { version = "0.1.3", path = "core" }
rt-local-macros = { version = "=0.1.4", path = "macros" }
rt-local-runtime-windows = { version = "0.1.0", path = "runtime/windows", optional = true }
rt-local-runtime-eframe = { version = "0.1.0", path = "runtime/eframe", optional = true }

[dev-dependencies]
derive-ex = "0.1.4"
async-std = "1.12.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "time"] }
egui = "0.24.0"
eframe = "0.24.0"

[[example]]
name = "eframe_run_simple_native"
required-features = ["eframe"]


[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[workspace]
members = ["core", "macros", "runtime/windows", "runtime/eframe"]
