[package]
name = "rt-local-core"
version = "0.1.3"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local-core/"
categories = ["asynchronous"]
keywords = ["async", "gui"]
description = "Thread local asynchronous runtime working with platform-specific event loops."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slabmap = "0.2.1"
futures-core = "0.3.31"
