[package]
name = "rt-local-core"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local/"
categories = ["asynchronous"]
keywords = ["async", "spawn_local", "thread_local", "ui_thread"]
description = "Thread local async runtime."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slabmap = "0.1.1"
futures-core = "0.3.21"
