[package]
name = "rt-local-macros"
version = "0.1.3"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local-macros/"
categories = ["asynchronous"]
keywords = ["async", "gui"]
description = "Thread local asynchronous runtime working with platform-specific event loops."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
