[package]
name = "rt-local-tests"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-local-core = { path = "../rt-local-core" }
rt-local-windows = { path = "../rt-local-windows" }
derive-ex = "0.1.0"

[dev-dependencies]
async-std = "1.11.0"
