[package]
name = "rt-local-windows"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local-windows/"
categories = ["asynchronous"]
keywords = ["async", "spawn_local", "message_loop", "ui_thread", "windows"]
description = "Thread local async runtime implemented by windows message loop."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-local-core = { version = "0.1.0", path = "../rt-local-core" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
