[package]
name = "rt-local"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local/"
categories = ["asynchronous"]
keywords = ["async", "gui"]
description = "Thread local async runtime."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows = ["dep:windows"]

[dependencies]
rt-local-core = { path = "../rt-local-core" }
rt-local-macros = { path = "../rt-local-macros" }
derive-ex = "0.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
optional = true


[dev-dependencies]
async-std = "1.11.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
