[package]
name = "rt-local-runtime-eframe"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local-runtime-eframe/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-local-core = { version = "0.1.3", path = "../../core" }
egui = "0.26.1"
eframe = "0.26.1"
