[package]
name = "rt-local-runtime-windows"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozenlib/rt-local"
documentation = "https://docs.rs/rt-local-runtime-windows/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-local-core = { version = "0.1.3", path = "../../core" }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
